<resources>
    <string name="app_name">PayInGroup</string>
    <string name="payingroup_activity_create_table_button">CREATE TABLE</string>
    <string name="table_details_activity_table_name_textView">TABLE NAME</string>
    <string name="table_details_activity_password_textView">PASSWORD</string>
    <string name="table_details_activity_confirm_password_textView">CONFIRM PASSWORD</string>
    <string name="table_details_activity_create_table_button">CONFIRM</string>
    <string name="login_register_activity_sign_in_button">SIGN IN</string>
    <string name="login_register_activity_or_textView">OR</string>
    <string name="login_register_activity_register_button">REGISTER</string>
    <string name="registration_activity_name_textView">NAME</string>
    <string name="registration_activity_surname_textView">SURNAME</string>
    <string name="registration_activity_email_textView">EMAIL</string>
    <string name="registration_activity_password_textView">PASSWORD</string>
    <string name="registration_activity_confirm_password_textView">CONFIRM PASSWORD</string>
    <string name="login_register_activity_email_editText">EMAIL</string>
    <string name="login_register_activity_password_editText">PASSWORD</string>
    <string name="registration_activity_register_now_button">REGISTER NOW</string>
    <string name="option_menu_guide">Guide</string>
    <string name="option_menu_signout">Sign out</string>
    <string name="option_menu_settings">Settings</string>
    <string name="option_menu_user">User</string>
    <string name="option_menu_home">Home</string>
    <string name="registration_activity_register_title_textView">REGISTER</string>
    <string name="camera_activity_confirm_button">CONFIRM</string>
    <string name="table_confirm_activity_invoice_editText1"></string>
    <string name="table_confirm_activity_invoice_editText2"></string>
    <string name="table_created_activity_delete_button">DELETE</string>
    <string name="calculate_payment_activity_total_textView">TOTAL</string>
    <string name="table_access_activity_password_textView">TABLE PASSWORD</string>
    <string name="table_access_activity_enter_button">ENTER</string>
    <string name="table_searched_activity_calculate_button">PAY</string>

</resources>
