<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/dialog_background">

    <TextView
        android:id="@+id/registration_activity_registration_label_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="20dp"
        android:text="@string/registration_activity_register_title_textView"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/registration_activity_name_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:text="@string/registration_activity_name_textView"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/registration_activity_name_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:digits="qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM1234567890"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/registration_activity_surname_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:text="@string/registration_activity_surname_textView"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/registration_activity_surname_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:backgroundTint="@color/colorPrimaryDark"
        android:digits="qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM1234567890"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/registration_activity_email_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:text="@string/registration_activity_email_textView"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/registration_activity_email_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:backgroundTint="@color/colorPrimaryDark"
        android:digits="qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM1234567890@._*"
        android:inputType="textEmailAddress"
        android:textAlignment="center" />


    <TextView
        android:id="@+id/registration_activity_password_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:text="@string/registration_activity_password_textView"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/registration_activity_password_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:backgroundTint="@color/colorPrimaryDark"
        android:inputType="textPassword"
        android:textAlignment="center" />


    <TextView
        android:id="@+id/registration_activity_confirm_password_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:text="@string/registration_activity_confirm_password_textView"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/registration_activity_confirm_password_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:backgroundTint="@color/colorPrimaryDark"
        android:inputType="textPassword"
        android:textAlignment="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="15dp"
        android:layout_weight="1"
        android:layout_margin="20dp"
        android:layout_marginHorizontal="80dp"
        android:text="@string/registration_activity_register_now_button"
        android:id="@+id/registration_activity_register_now_button"
        android:background="@drawable/buttons"
        android:textColor="@color/white"
        android:textSize="24sp"
        />


</LinearLayout>